--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@
 </div>
 
 <h2>Author: Felipe Queiroz Lopes</h2>
+
+<div>
+    <p>Looking at the commit SHAs! FUCK THIS TEACHER BTW HE SUCKS</p>
+</div>
