Adressing foul words

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <h1> Hello Git World</h1>
 
 <div>
-    <p>Working with git is easy, but the class teacher sucks!</p>
+    <p>Working with git is easy, if well explained.</p>
 </div>
 
 <h2>Author: Felipe Queiroz Lopes</h2>
 
 <div>
-    <p>Looking at the commit SHAs! FUCK THIS TEACHER BTW HE SUCKS</p>
+    <p>Looking at the commit SHAs!
+        Having a hard time with a bad instructor.
+    I will hang on! </p>
 </div>
