Manual website commit change
Learning by myself.

--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@
 <div>
     <p>Looking at the commit SHAs! FUCK THIS TEACHER BTW HE SUCKS</p>
 </div>
+<div>his explanation is so bad, i'm getting furious</div>
