--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
-<h1> Hello Git World</h1>
+<!DOCTYPE html>
+<html>
+    <body>
+    <h1> Hello Git World</h1>
 
-<div>
-    <p>Working with git is easy, if well explained.</p>
-</div>
+    <div>
+        <p>Working with git is easy, if well explained.</p>
+    </div>
 
-<h2>Author: Felipe Queiroz Lopes</h2>
+    <h2>Author: Felipe Queiroz Lopes</h2>
 
-<div>
-    <p>Looking at the commit SHAs!
-        Having a hard time with a bad instructor.
-    I will hang on! </p>
-</div>
-<div>his explanation is so bad, i'm getting furious</div>
+    <div>
+        <p>Looking at the commit SHAs!
+            Having a hard time with a bad instructor.
+        I will hang on! </p>
+    </div>
+    <div>his explanation is so bad, i'm getting furious</div>
 
 
 
-<h3>This doesn't sound complicated, but it is.</h3>
-<p>New Changes</p>
-
+    <h3>This doesn't sound complicated, but it is.</h3>
+    <p>New Changes</p>
+    </body>
+</html>
 <!--A bad instructor will make anything easy, hard to learn -->
 
 
