Cleared my swearings

--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 
     <div>
         <p>Looking at the commit SHAs!
-            Having a hard time with a bad instructor.
-        I will hang on! </p>
+            Having a hard time with a bad instructor?
+            Not anymore, I'll do it my way.
+         </p>
     </div>
-    <div>his explanation is so bad, i'm getting furious</div>
+    <div>What is a div? Dunno.</div>
 
 
 
-    <h3>This doesn't sound complicated, but it is.</h3>
-    <p>New Changes</p>
+    <h3>Why are you here?</h3>
+    <p>Why is anybody here?
+        ...
+        WOW
+    </p>
     </body>
 </html>
-<!--A bad instructor will make anything easy, hard to learn -->
+<!--This is a commentary. -->
 
 
