--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Why are you here?</title>
+    </head>
     <body>
-    <h1> Hello Git World</h1>
-    <div>
-        <p>Working with git is easy, if well explained.</p>
-    </div>
-    <h2>Author: Felipe Queiroz Lopes</h2>
-    <div>
-        <p>Looking at the commit SHAs!
-            Having a hard time with a bad instructor?
-            Not anymore, I'll do it my way.
-         </p>
-    </div>
-    <div>What is a div? Dunno.</div>
-    <h3>Why are you here?</h3>
-    <p>Why is anybody here?
-        ...
-        WOW
-
-        
+        <pre>
+            
 
 @@@@@@@@@@@@@@@@@@@@@@####**#************##*#%*@#*@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*%*********************+++*++++++++*++++++++++@@@@@@@@@@@@@@@@@@@@@
 @@@@@@@@@@@@@@@@@@@@@@%#***+#*++*****#*#*#**@@@%*@@@@@@@@@*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@%%******##************++*++++++++++++++++++++++@@@@@@@@@@@@@@@@@@@@@
@@ -74,12 +62,8 @@
 @@@@@@@@@@@@@@@@@@@@@#***#####**************##*#@%%%@%@@@@@@%%%@@@@**+*+++++++++++++++++++++++++++++++++++++++++++++++++*%##########################%@@@@@@@@@@@@@@@@@@@@@
 
 
-
-
-
-
-    </p>
-    </body>
+        </pre>
+    </body>   
 </html>
 <!--This is a commentary. -->
 <!--This is another commentary, so that you know :) -->
