Trying to force conflicts

--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
     <body>
         <pre>
             
-https://www.youtube.com/watch?v=IsTVhy7jnF8
+<link>https://www.youtube.com/watch?v=IsTVhy7jnF8</link>
+
+<iframe
+  width="560" height="315"
+  src="https://www.youtube-nocookie.com/embed/IsTVhy7jnF8?rel=0&autoplay=1&mute=1"
+  title="YouTube video"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen>
+</iframe>
 @@@@@@@@@@@@@@@@@@@@@@####**#************##*#%*@#*@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*%*********************+++*++++++++*++++++++++@@@@@@@@@@@@@@@@@@@@@
 @@@@@@@@@@@@@@@@@@@@@@%#***+#*++*****#*#*#**@@@%*@@@@@@@@@*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@%%******##************++*++++++++++++++++++++++@@@@@@@@@@@@@@@@@@@@@
 @@@@@@@@@@@@@@@@@@@@@@%###***************##*@%#%@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%%@@@#**********++****++++++++++*++=++=*+++++++@@@@@@@@@@@@@@@@@@@@@
