--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-    <head>
+fuck it    <head>
         <meta charset="UTF-8">
         <title>Why are you here?</title>
     </head>
